samples/_failures_safe/1761087764_432d79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07c819e7.c: In function ‘main’:
./samples/SAFE/__tmp_07c819e7.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_07c819e7.c:140:9: error: expected declaration or statement at end of input
